After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 682649 - small mem leak in TotemPropertiesView
small mem leak in TotemPropertiesView
Status: RESOLVED FIXED
Product: totem
Classification: Core
Component: Properties page
3.5.x
Other Linux
: Normal normal
: ---
Assigned To: General Totem maintainer(s)
General Totem maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2012-08-25 08:02 UTC by Pavel Vasin
Modified: 2012-08-25 10:13 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
properties: fix string leaks (1.00 KB, patch)
2012-08-25 08:02 UTC, Pavel Vasin
committed Details | Review

Description Pavel Vasin 2012-08-25 08:02:04 UTC
Created attachment 222380 [details] [review]
properties: fix string leaks

see attached patch
Comment 1 Philip Withnall 2012-08-25 10:13:35 UTC
Review of attachment 222380 [details] [review]:

Good catch. I’ve committed it to master with a slight change to the commit message. Thanks for the patch!

commit 4c8c1dcdb263def8ae195cb9379fcb61350c0446
Author: Pavel Vasin <rat4vier@gmail.com>
Date:   Sat Aug 25 11:20:15 2012 +0400

    properties: fix string leaks
    
    Closes: https://bugzilla.gnome.org/show_bug.cgi?id=682649

 src/totem-properties-view.c | 2 ++
 1 file changed, 2 insertions(+)