properties: fix string leaks

Closes: https://bugzilla.gnome.org/show_bug.cgi?id=682649